<resources>
    <string name="app_name">Music App</string>
    <string name="artists">Artists</string>
    <string name="tracks">Tracks</string>
    <string name="albums">Albums</string>
    <string name="empty_result">Nothing was found by your request!</string>
    <string name="track_download_success">Download Completed!</string>
    <string name="track_download_cancel">Download Cancelled!</string>
    <string name="ok">OK</string>
    <string name="external_storage_permission_message">In order to download track, please give access to external storage</string>
    <string name="music_text_field_description">music text field</string>
    <string name="shimmer_animation_item">Shimmer Animation Item</string>
    <string name="player_slider">Player Slider</string>
    <string name="play_button">Play Button</string>
    <string name="expandable_arrow">Expandable Arrow</string>
    <string name="feeds_column">feeds column</string>
    <string name="empty_email_or_password">Email or password must not be empty</string>
    <string name="user_not_exist_message">User does not exist</string>
    <string name="password_error_message">Password length must be bigger than 6 symbols</string>
    <string name="repeat_password_error_message">Passwords are not equal</string>
    <string name="email_error_message">Email is not valid.</string>
    <string name="failed_auth_message">Authentication failed</string>
    <string name="server_client_id">39972456311-d2kjlmgr59u1qo2g4f1f202gqi0252ct.apps.googleusercontent.com</string>
</resources>