...
                val playerSlider = stringResource(R.string.player_slider)
                Icon(
                    imageVector = if (trackViewModelState.isTrackPlaying) Icons.Filled.Pause else Icons.Filled.PlayArrow,
                    modifier = Modifier
                        .align(Alignment.CenterVertically)
                        .clickable(onClick = audioPlayerAction),
                    contentDescription = if (trackViewModelState.isTrackPlaying) "Pause Button" else stringResource(
                        R.string.play_button
                    )
                )
                Slider(
                    value = trackViewModelState.trackMinutes,
                    modifier = Modifier
...
